# ahns-eval

./: .gitignore  README.md  requirements.txt  setup.py
ahns.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
eval-framework/: .gitignore  README.md  pyproject.toml  requirements.txt
eval-framework/docs/: README.md  api.md  best_practices.md  troubleshooting.md
eval-framework/examples/: basic_usage.py  batch_evaluation.py  custom_evaluator.py  model_comparison.py  multimodal_example.py
eval-framework/examples/configs/: basic_llm_eval.yaml  custom_eval_template.yaml  multimodal_eval.yaml  safety_eval.yaml
eval-framework/src/eval_framework/analysis/: comparison.py  error_analysis.py  visualization.py
eval-framework/src/eval_framework/cli/: main.py  progress.py
eval-framework/src/eval_framework/core/: __init__.py  base.py  config.py  engine.py  registry.py  results.py
eval-framework/src/eval_framework/datasets/: base.py  csv_dataset.py  huggingface_dataset.py  json_dataset.py  multimodal_dataset.py  preprocessors.py  registry.py
eval-framework/src/eval_framework/evaluators/: exact_match.py  llm_judge.py  multiple_choice.py  regex_evaluator.py  safety.py  similarity.py
eval-framework/src/eval_framework/metrics/: basic.py  text.py
eval-framework/src/eval_framework/models/: anthropic_model.py  base.py  gemini_model.py  grok_model.py  huggingface_model.py  llama_model.py  openai_model.py
eval-framework/src/eval_framework/reporting/: base.py  html.py  json.py  latex.py  pdf.py
eval-framework/tests/integration/: test_error_recovery.py  test_evaluation_pipeline.py  test_large_dataset_handling.py  test_multi_model_comparison.py
eval-framework/tests/performance/: test_benchmarks.py
eval-framework/tests/test_core/: test_base.py  test_registry.py
eval-framework/tests/test_metrics/: test_rouge.py
eval-framework/tests/test_models/: test_text_model.py
(+27 files in other folders)
